--- a/qa.env
+++ b/qa.env
@@ -1,1 +1,2 @@
 ALL_COMPANIES = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/allcompanies
+AADHAR_AUTHENTICATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/verify
