exp layer service and user management test cases added partial

--- a/qa.env
+++ b/qa.env
@@ -1,2 +1,4 @@
 ALL_COMPANIES = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/allcompanies
 AADHAR_AUTHENTICATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/verify
+AADHAR_VALIDATE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/validateOtp
+MOBILE_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/resumeMobile/verify
