--- a/qa.env
+++ b/qa.env
@@ -7,5 +7,7 @@ ACCOUNT_SERVICE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/account
 CONNECT_NOW = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/connectNow
 SHEDULE_LATER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLater
 IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
+APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
+NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
 
 
