--- a/qa.env
+++ b/qa.env
@@ -10,5 +10,6 @@ IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPerson
 APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
 NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
 USER_INFO = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/user/info/
-
+STATE_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/state
+CITY_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/city?state=
 
