--- a/qa.env
+++ b/qa.env
@@ -9,5 +9,7 @@ SHEDULE_LATER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLat
 IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
 APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
 NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
-
-
+APPLY_HOSPICASH = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyHospicash
+APPLY_CREDITCARD = http://localhost:8881/api/ntb/v1/applyCreditCard
+STATE_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/state
+CHEQUE_PICKUP = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
