--- a/qa.env
+++ b/qa.env
@@ -11,5 +11,5 @@ APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSe
 NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
 USER_INFO = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/user/info/
 STATE_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/state
-CITY_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/city?state=
+CITY_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/city
 
