--- a/qa.env
+++ b/qa.env
@@ -9,5 +9,6 @@ SHEDULE_LATER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLat
 IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
 APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
 NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
+APPLY_HOSPICASH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyHospicash
 
 
