--- a/qa.env
+++ b/qa.env
@@ -1,3 +1,6 @@
+SFDC_QA_URL = https://login.salesforce.com
+
+
 ALL_COMPANIES = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/allcompanies
 AADHAR_AUTHENTICATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/verify
 AADHAR_VALIDATE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/validateOtp
@@ -9,5 +12,6 @@ SHEDULE_LATER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLat
 IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
 APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
 NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
-
+APPLY_CREDITCARD = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyCreditCard
+CHEQUE_PICKUP = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
 
