--- a/qa.env
+++ b/qa.env
@@ -1,3 +1,6 @@
+SFDC_QA_URL=https://idfcfirstcurrentfsc--qa.sandbox.my.salesforce.com/
+
+
 ALL_COMPANIES = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/allcompanies
 AADHAR_AUTHENTICATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/verify
 AADHAR_VALIDATE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/validateOtp
