--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "test-microservice-dev": "env-cmd -f dev.env mocha --config ./config/microservice.config.js",
     "test-microservice-qa": "env-cmd -f qa.env mocha --config ./config/microservice.config.js",
     "test-microservice-uat": "env-cmd -f uat.env mocha --config ./config/microservice.config.js ",
-    "test-web-ui": "npx wdio ./config/salesforce.config.js",
+    "test-web-ui": "npx wdio ./config/sa_app.config.js",
     "test-mobile-ui": "npx wdio ./config/android.emulator.config.js"
   },
   "keywords": [],
