--- a/qa.env
+++ b/qa.env
@@ -18,4 +18,5 @@ CITY_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/city
 APPLY_HOSPICASH = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyHospicash
 APPLY_CREDITCARD = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyCreditCard
 CHEQUE_PICKUP = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
+PAN_VALIDATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/pan/verify
 
