--- a/qa.env
+++ b/qa.env
@@ -19,4 +19,5 @@ APPLY_HOSPICASH = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyHospicash
 APPLY_CREDITCARD = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyCreditCard
 CHEQUE_PICKUP = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
 PAN_VALIDATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/pan/verify
+MOBILE_DEDUPE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/mobile/dedupe
 
