--- a/qa.env
+++ b/qa.env
@@ -1,21 +1,21 @@
 SFDC_QA_URL=https://idfcfirstcurrentfsc--qa.sandbox.my.salesforce.com/
 
 
-ALL_COMPANIES = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/allcompanies
-AADHAR_AUTHENTICATION = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/verify
-AADHAR_VALIDATE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/aadhar/validateOtp
-MOBILE_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/resumeMobile/verify
-FRAUD_CHECK = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/fraudCheck
-ACCOUNT_SERVICE = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/account
-CONNECT_NOW = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/connectNow
-SHEDULE_LATER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLater
-IN_PERSON_VERIFY = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
-APPLY_CROSSSELL= https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
-NEAREST_BRANCH=https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
-USER_INFO = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/user/info/
-STATE_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/state
-CITY_MASTER = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/city
-APPLY_HOSPICASH = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyHospicash
-APPLY_CREDITCARD = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/applyCreditCard
-CHEQUE_PICKUP = https://app.qa-opt.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
+ALL_COMPANIES = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/allcompanies
+AADHAR_AUTHENTICATION = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/aadhar/verify
+AADHAR_VALIDATE = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/aadhar/validateOtp
+MOBILE_VERIFY = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/resumeMobile/verify
+FRAUD_CHECK = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/fraudCheck
+ACCOUNT_SERVICE = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/account
+CONNECT_NOW = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/vkyc/connectNow
+SHEDULE_LATER = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/vkyc/scheduleLater
+IN_PERSON_VERIFY = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/vkyc/inPersonVerify
+APPLY_CROSSSELL= https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/applyForCrossSellProducts
+NEAREST_BRANCH=https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/nearestBranchesWithCity
+USER_INFO = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/user/info/
+STATE_MASTER = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/state
+CITY_MASTER = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/city
+APPLY_HOSPICASH = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/applyHospicash
+APPLY_CREDITCARD = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/applyCreditCard
+CHEQUE_PICKUP = https://app.qa-ntb.idfcfirstbank.com/api/ntb/v1/cheque/pickUp
 
