--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
-    "@wdio/cli": "^7.16.13",
+    "@wdio/cli": "^7.32.0",
     "allure-commandline": "^2.17.2",
     "axios": "^0.26.1",
     "chai": "^4.3.4",
-    "chromedriver": "^111.0.0",
+    "csvtojson": "^2.0.10",
     "env-cmd": "^10.1.0",
+    "fs": "^0.0.1-security",
     "mochawesome": "^6.3.1",
     "npm": "^8.19.2",
     "oracledb": "^5.3.0",
     "rimraf": "^3.0.2",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
@@ -21,6 +23,7 @@
     "@wdio/mocha-framework": "^7.16.13",
     "@wdio/shared-store-service": "^7.16.10",
     "@wdio/spec-reporter": "^7.16.13",
+    "chromedriver": "^114.0.2",
     "dependency-check": "^4.1.0",
     "dotenv": "^10.0.0",
     "global-agent": "^3.0.0",
